# uDevGames.com

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.md  MISSING.md  README.md  deploy.sh  dotenv  dotenv.sh  package-lock.json  package.json  run_in_wsl.sh  todo.sh  wsl.sh
.github/workflows/: rust.yml
app/: app.scss
migrations/2020-09-22-010642_create_gh_user_record/: down.sql  up.sql
migrations/2020-09-23-061850_create_user_permissions/: up.sql
migrations/2020-10-11-042602_create_attachments/: up.sql
migrations/2020-10-11-042625_create_rich_texts/: down.sql  up.sql
migrations/2020-10-11-042635_create_jam_entry_updates/: down.sql  up.sql
migrations/2020-10-11-043905_create_rich_text_attachments/: down.sql  up.sql
migrations/2020-10-11-045406_create_jam_entries/: down.sql  up.sql
migrations/2020-10-11-050557_create_jams/: down.sql  up.sql
src/: attachment.rs  attachments.rs  cliopts.rs  db.rs  error_handlers.rs  gh_oauth.rs  homepage.rs  main.rs  models.rs  schema.rs  serve.rs  template_context.rs
src/controllers/: attachments.rs  gh_oauth.rs  homepage.rs  jam_entries.rs  jams.rs  mod.rs
src/models/: attachments.rs  gh_user_records.rs  jams.rs  mod.rs  permissions.rs  rich_texts.rs
src/template_helpers/: admin_only.rs  attachment_context.rs  breadcrumbs.rs  jam_context.rs  mod.rs  user_optional.rs
static/: site.css  udevgames_logo.xcf
templates/: edit_jam.html.tera  error_page.html.tera  gh_callback.html.tera  homepage.html.tera  layout.html.tera  login.html.tera  login_with_github.html.tera  logout.html.tera  skeleton.html.tera
