[package]
name = "udevgames"
version = "0.1.0"
authors = ["Christopher R. Miller <xpm@mysteriouspants.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = [ "sqlite", "r2d2" ] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
serde = { version = "1.0.116", features = [ "derive" ] }

[dependencies.reqwest]
version = "0.10.8"
features = [ "json", "blocking" ]

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
default-features = false
features = [ "serve", "tera_templates" ]
