[package]
name = "udevgames"
version = "0.1.0"
authors = ["Christopher R. Miller <xpm@mysteriouspants.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "3.0.0-beta.2"
diesel = { version = "1.4.5", features = [ "chrono", "sqlite", "r2d2" ] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
md5 = "0.7.0"
pulldown-cmark = "0.8.0"
serde = { version = "1.0.117", features = [ "derive" ] }
thiserror = "1.0.21"

[dependencies.reqwest]
version = "0.10.8"
features = [ "json" ]

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
features = [ "secrets" ]

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
default-features = false
features = [ "compression", "helmet", "serve", "tera_templates" ]

[dev-dependencies]
hex = "0.4.2"
tempfile = "3.1.0"
